# ros2_hexapod_nikita

./: .gitignore  LICENSE  README.md  commands.md  servo_id_read.sh  servo_id_set.sh  servo_move.sh  topic_servo_controller.md  topic_teleop.md
.github/: copilot-instructions.md
nikita_brain/: CMakeLists.txt  package.xml  test_behavior_parser.cpp  test_coordinator_behaviors.cpp
nikita_brain/config/: behaviors.json  behaviors.yaml  interpretation.json  parameter.yaml
nikita_brain/include/nikita_brain/action/: action_planner.hpp
nikita_brain/include/nikita_brain/handler/: communication.hpp  ihandler.hpp  movement.hpp
nikita_brain/include/nikita_brain/parser/: behavior_parser.hpp
nikita_brain/include/nikita_brain/requester/: coordinator.hpp  error_management.hpp  irequester.hpp  recognition.hpp  simpletimer.hpp  utility.hpp
nikita_brain/launch/: brain_launch.py
nikita_brain/src/action/: action_planner.cpp
nikita_brain/src/handler/: communication.cpp  movement.cpp  system.cpp
nikita_brain/src/parser/: behavior_parser.cpp
nikita_brain/src/requester/: coordinator.cpp  error_management.cpp  recognition.cpp  text_interpreter.cpp
nikita_brain/test/: test_error_management.cpp  test_simpletimer.cpp  test_text_interpreter.cpp
nikita_bringup/: CMakeLists.txt  package.xml
nikita_bringup/autostart/: autostart_ros2.service
nikita_bringup/launch/: target_launch.py  test_launch.py
nikita_communication/: package.xml  setup.cfg  setup.py
nikita_communication/config/: params.yaml
nikita_communication/launch/: communication_launch.py
nikita_communication/nikita_communication/: chatbot.py  music_player.py  node_communication.py  stt_offline.py  tts.py
nikita_doc/setup_raspberry_pi/: setup_rpi_ubuntu_server_v2.md
nikita_hmi/: package.xml  setup.cfg  setup.py
nikita_hmi/launch/: hmi_launch.py
nikita_hmi/nikita_hmi/: node_hmi.py
nikita_interfaces/: CMakeLists.txt  package.xml
nikita_interfaces/msg/: JoystickRequest.msg  MovementRequest.msg
nikita_lidar/: CMakeLists.txt  package.xml
nikita_lidar/launch/: lidar_launch.py  lidar_launch.yaml
nikita_lidar/src/: node_lidar.cpp
nikita_movement/: CMakeLists.txt  package.xml
nikita_movement/config/: actionpackages.json  actionpackages.yaml  anatomy.yaml  servo_description.yaml
nikita_movement/include/nikita_movement/action/: action_executor.hpp
nikita_movement/include/nikita_movement/handler/: callback_timer.hpp  leg_servo_conversion.hpp  offline_servo_protocol.hpp  servo_controller.hpp  servo_protocol.hpp  servohandler.hpp
nikita_movement/include/nikita_movement/requester/: actionpackagesparser.hpp  gait_bodypose.hpp  gait_bodyroll.hpp  gait_calibrate.hpp  gait_clap.hpp  gait_continuouspose.hpp  gait_highfive.hpp  gait_laydown.hpp  gait_legroll.hpp  gait_legwave.hpp  gait_look.hpp  gait_neutral.hpp  gait_parameters.hpp  gait_ripple.hpp  gait_singlepose.hpp  gait_standup.hpp  gait_testlegs.hpp  gait_tripod.hpp  gait_waiting.hpp  gait_watch.hpp  gaitcontroller.hpp  gaits_parameter.hpp  igaits.hpp  interpolation.hpp  kinematics.hpp  lowpassfilter.hpp  requester.hpp  requests.hpp  types.hpp
nikita_movement/include/requester/: gait_look.hpp
nikita_movement/launch/: movement_launch.py  movement_offline_launch.py
nikita_movement/scripts/: sinuswave_tripod.py
nikita_movement/src/: node_movement.cpp
nikita_movement/src/action/: action_executor.cpp
nikita_movement/src/handler/: servo_controller.cpp  servo_protocol.cpp  servohandler.cpp
nikita_movement/src/requester/: actionpackagesparser.cpp  gait_bodypose.cpp  gait_bodyroll.cpp  gait_calibrate.cpp  gait_clap.cpp  gait_continuouspose.cpp  gait_highfive.cpp  gait_laydown.cpp  gait_legroll.cpp  gait_legwave.cpp  gait_look.cpp  gait_neutral.cpp  gait_ripple.cpp  gait_singlepose.cpp  gait_standup.cpp  gait_testlegs.cpp  gait_tripod.cpp  gait_waiting.cpp  gait_watch.cpp  gaitcontroller.cpp  kinematics.cpp  lowpassfilter.cpp  requester.cpp
nikita_movement/test/: test_actionpackagesparser.cpp  test_complete_body_init.cpp  test_gait_bodyroll.cpp  test_gait_clap.cpp  test_gait_controller.cpp  test_gait_highfive.cpp  test_gait_laydown.cpp  test_gait_legwave.cpp  test_gait_standup.cpp  test_gait_testlegs.cpp  test_gait_vertical.cpp  test_gait_watch.cpp  test_helpers.hpp  test_kinematics.cpp  test_leg_servo_conversion.cpp  test_moveBodyNew_publish.cpp  test_new_kinematics.cpp  test_pose_interpolation.cpp  test_requester.cpp  test_servo_controller.cpp
nikita_movement/test/mock/: mock_action_executor.hpp  mock_servohandler.hpp
nikita_servo_controller/: CMakeLists.txt  package.xml  readme.md
nikita_servo_controller/config/: servo_description.yaml
nikita_servo_controller/include/nikita_servo_controller/: bus_servo_protocol.hpp  servo_controller.hpp
nikita_servo_controller/launch/: servo_controller_launch.py
nikita_servo_controller/src/: bus_servo_protocol.cpp  node_servo_controller.cpp  servo_controller.cpp
nikita_teleop/: package.xml  readme.md  setup.cfg  setup.py  test_gamepad.py
nikita_teleop/launch/: teleop_launch.py
nikita_teleop/nikita_teleop/: node_teleop.py
nikita_utils/: CMakeLists.txt  package.xml
nikita_utils/include/nikita_utils/: callback_timer.hpp  filters.hpp  geometry.hpp  linear_interpolation.hpp  msg_twist.hpp  pid_controller.hpp  simpletimer.hpp
nikita_utils/test/: test_callback_timer.cpp  test_filters.cpp  test_geometry.cpp  test_linear_interpolation.cpp  test_pid_controller.cpp  test_simpletimer.cpp
